# projeto-academia

./: Cargo.toml
src/: db.rs  handlers.rs  main.rs  models.rs
templates/: base.html  editar_treinos_salvos.html  montar_treino.html  tela_inicial.html  treinos_prontos.html  visualizar_treinos.html
