[package]
name = "projeto_academia"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-identity = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "chrono"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tera = "1.18"
actix-files = "0.6"
bcrypt = "0.14"
rand = "0.8"